--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firechat": "^3.0.1",
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
+    "mysql": "^2.13.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-modal": "^3.3.1",
